# yolov8_onnx_cpp

./: CMakeLists.txt  README.md  main.cpp
include/: yolov8_onnx.cpp  yolov8_seg_onnx.cpp
